--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 width: 70px;
                 height: 90px;
                 ">              
-                <a href="#">
+                <a src=AJUDAae!(1).pdf>
                     <span></span>
                     Cadastre seu negócio</a>   
     
